style.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    margin: 60px;
    background-color: rgb(215, 227, 233);
}

#win-screen {
    display: none;
    color: rgba(0, 0, 0, 0.8);
    text-align: center;
    font-family: 'Fredoka', sans-serif;
}

#game-over-screen {
    display: none;
    color: rgba(0, 0, 0, 0.8);
    text-align: center;
    font-family: 'Fredoka', sans-serif;
}

#restart-button {
    display: none;
    color: white;
    background-color: rgb(71, 213, 73);
    border: none;
    padding: 10px 20px;
    font-family: 'Fredoka', sans-serif;
    font-size: 16px;
    cursor: pointer;
    margin: 0 auto 20px;
}

#lives {
    font-family: 'Fredoka', sans-serif;
    font-size: 18px;
    font-weight: 500;
    margin-bottom: 10px;
}

#board {
    height: 660px;
    width: 600px;
    position: relative;
    border: black solid 4px;
}

.river {
    width: 600px;
    height: 320px;
    background-color: rgb(164, 199, 218);
    position: absolute;
    z-index: -1000

}

#frog {
    margin: 20px;
    width: 50px;
    height: 50px;
    background-color: rgb(71, 213, 73);
    border-radius: 30%;
    overflow: visible;
    position: absolute;
    z-index: 10;
}

.eyes {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 6px;
}

.eye {
    width: 8px;
    height: 8px;
    background-color: black;
    border-radius: 50%;
}

.cheeks {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0px 3px;
}

.cheek {
    width: 10px;
    height: 5px;
    background-color: rgb(255, 197, 214);
    border-radius: 40%;
}

.mouth {
    position: absolute;
    left: 22px;
    top: 13px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    rotate: 90deg;
    font-weight: 600;
    font-size: 8px;
    font-family: Roboto;
}

.belly {
    width: 25px;
    height: 25px;
    background-color: antiquewhite;
    border-radius: 40%;
    margin: 0 auto;
}

.legs {
    position: absolute;
    bottom: -6px;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: Fredoka;
    font-size: 25px;
    font-weight: bold;
}

.right-leg {
    margin-right: -9px;
    color: rgb(71, 213, 73);
}

.left-leg {
    transform: rotateY(180deg);
    margin-left: -9px;
    color: rgb(71, 213, 73);
}

.car {
    margin: 20px;
    width: 70px;
    height: 30px;
    background-color: rgb(242, 43, 43);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: absolute;
}

.roof {
    width: 40px;
    height: 10px;
    background-color: #F22B2B;
    position: absolute;
    bottom: 30px;
    left: 15px;

}

.wheels {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: absolute;
    bottom: -10px;
    left: 5px;
    right: 5px;
}

.wheel {
    height: 15px;
    width: 15px;
    background-color: black;
    border-radius: 50%;
}

.car-2 {
    margin: 20px;
    width: 70px;
    height: 30px;
    background-color: #5262dd;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: absolute;
}

.roof-2 {
    width: 40px;
    height: 10px;
    background-color: #5262dd;
    position: absolute;
    bottom: 30px;
    left: 15px;

}

.wheels-2 {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: absolute;
    bottom: -10px;
    left: 5px;
    right: 5px;
}

.wheel-2 {
    height: 15px;
    width: 15px;
    background-color: black;
    border-radius: 50%;
}

.car-3 {
    margin: 20px;
    width: 70px;
    height: 30px;
    background-color: #ff8514;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: absolute;
}

.roof-3 {
    width: 40px;
    height: 10px;
    background-color: #ff8514;
    position: absolute;
    bottom: 30px;
    left: 15px;

}

.wheels-3 {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: absolute;
    bottom: -10px;
    left: 5px;
    right: 5px;
}

.wheel-3 {
    height: 15px;
    width: 15px;
    background-color: black;
    border-radius: 50%;
}


.log-firstRow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.log-secondRow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.log-1 {
    width: 100px;
    height: 40px;
    background-color: rgb(158, 119, 72);
    position: absolute;
}

.log-2 {
    width: 100px;
    height: 40px;
    background-color: rgb(158, 119, 72);
    position: absolute;
}

.lilypads {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.lilypad {
    margin: 20px;
    height: 70px;
    width: 70px;
    background-color: rgb(43, 149, 73);
    border-radius: 50%;
}

.lilypad.visited {
    background-color: #38B379;
}

.road {
    width: 600px;
    height: 350px;
    background-color: rgb(49, 47, 47);
    position: absolute;
    bottom: 0;
    z-index: -1000;
}

.lane {
    width: 600px;
    height: 110px;
    border-bottom: 13px dashed rgb(255, 255, 255);
}

